<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatOn</string>
    <string name="welcome_msg">Lets Get You Started!!</string>
    
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="mobno">Enter Mobile Number</string>
    <string name="pass">Enter Password</string>
    <string name="repass">ReEnter Password</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_user_contacts">UserContacts</string>
    <string name="title_activity_login">LoginActivity</string>

</resources>
