<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kushal.serverconnectivity.UserContacts" >
	
    <item
        android:id="@+id/refresh"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/contacts"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/contacts"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/logout" />

</menu>
