<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kushal.chatter.MainActivity" >

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/welcome_msg"
        android:textColor="#AC72D0"
        android:textSize="25sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/signup"
        android:layout_alignBottom="@+id/signup"
        android:layout_alignParentRight="true"
        android:background="#F58CDE"
        android:text="@string/login" />

    <Button
        android:id="@+id/signup"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/app_name"
        android:layout_marginTop="158dp"
        android:background="#F58CDE"
        android:text="@string/signup" />

</RelativeLayout>

